--- a/src/templates/05_guest-login.twig
+++ b/src/templates/05_guest-login.twig
@@ -62,22 +62,22 @@
 					<form>
 						<div class="guest-form__wrap">
 							<div class="guest-form__top-part">
-								<div class="guest-form__line">
+								<label class="guest-form__line">
 									<div class="guest-form__line-title-wrap">
 										<p class="guest-form__line-title">Username</p>
 									</div>
 									<div class="guest-form__input-holder">
 										<input type="text" class="guest-form__input" placeholder="Username">
 									</div>
-								</div>
-								<div class="guest-form__line">
+								</label>
+								<label class="guest-form__line">
 									<div class="guest-form__line-title-wrap">
 										<p class="guest-form__line-title">Password</p>
 									</div>
 									<div class="guest-form__input-holder">
 										<input type="text" class="guest-form__input" placeholder="Password">
 									</div>
-								</div>
+								</label>
 
 								<div class="guest-login__choose-type">
 									<div class="guest-login__choose-type-item-wrap">
