--- a/src/templates/06_guest-registration.twig
+++ b/src/templates/06_guest-registration.twig
@@ -60,70 +60,70 @@
 			<div class="guest-reg__content">
 				<div class="guest-form">
 					<form>
-						<div class="guest-form__line">
+						<label class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
 								<p class="guest-form__line-title guest-form__line-title_required">Username</p>
 							</div>
 							<div class="guest-form__input-holder">
 								<input type="text" class="guest-form__input" placeholder="Username">
 							</div>
-						</div>
-						<div class="guest-form__line">
+						</label>
+						<label class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
 								<p class="guest-form__line-title guest-form__line-title_required">Password</p>
 							</div>
 							<div class="guest-form__input-holder">
 								<input type="text" class="guest-form__input" placeholder="Password">
 							</div>
-						</div>
-						<div class="guest-form__line">
+						</label>
+						<label class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
 								<p class="guest-form__line-title guest-form__line-title_required">E-mail</p>
 							</div>
 							<div class="guest-form__input-holder">
 								<input type="text" class="guest-form__input" placeholder="E-mail">
 							</div>
-						</div>
-						<div class="guest-form__line">
+						</label>
+						<label class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
 								<p class="guest-form__line-title guest-form__line-title_required">Name</p>
 							</div>
 							<div class="guest-form__input-holder">
 								<input type="text" class="guest-form__input" placeholder="Name">
 							</div>
-						</div>
-						<div class="guest-form__line">
+						</label>
+						<label class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
 								<p class="guest-form__line-title">Company Name</p>
 							</div>
 							<div class="guest-form__input-holder">
 								<input type="text" class="guest-form__input" placeholder="Company Name">
 							</div>
-						</div>
-						<div class="guest-form__line">
+						</label>
+						<label class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
 								<p class="guest-form__line-title">City</p>
 							</div>
 							<div class="guest-form__input-holder">
 								<input type="text" class="guest-form__input" placeholder="City">
 							</div>
-						</div>
-						<div class="guest-form__line">
+						</label>
+						<label class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
 								<p class="guest-form__line-title">Country</p>
 							</div>
 							<div class="guest-form__input-holder">
 								<input type="text" class="guest-form__input" placeholder="Country">
 							</div>
-						</div>
-						<div class="guest-form__line">
+						</label>
+						<label class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
 								<p class="guest-form__line-title">Phone</p>
 							</div>
 							<div class="guest-form__input-holder">
 								<input type="text" class="guest-form__input" placeholder="Phone">
 							</div>
-						</div>
+						</label>
 						<div class="guest-form__line guest-form__line_checkbox">
 							<label class="guest-form__checkbox-holder">
 								<input type="checkbox" class="checkbox-styled js-checkbox">
