--- a/src/templates/11_publishers-edit-account.twig
+++ b/src/templates/11_publishers-edit-account.twig
@@ -19,23 +19,23 @@
 						{#FORM#}
 						<div class="publishers__form publishers__form_edit-account">
 							<form>
-								<div class="form__input-container js-form-input-container">
+								<label class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text js-input-text form__input-text_required">Name</p>
 									</div>
 									<div class="form__input-holder">
 										<input type="text" class="form__input js-form-input">
 									</div>
-								</div>
-								<div class="form__input-container js-form-input-container">
+								</label>
+								<label class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text js-input-text form__input-text_required">E-mail</p>
 									</div>
 									<div class="form__input-holder">
 										<input type="text" class="form__input js-form-input">
 									</div>
-								</div>
-								<div class="form__input-container js-form-input-container">
+								</label>
+								<label class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text js-input-text">Password</p>
 										<p class="form__input-under-text">Keep it blank to use the current password</p>
@@ -43,56 +43,56 @@
 									<div class="form__input-holder">
 										<input type="password" class="form__input js-form-input">
 									</div>
-								</div>
-								<div class="form__input-container js-form-input-container">
+								</label>
+								<label class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text js-input-text">Company name</p>
 									</div>
 									<div class="form__input-holder">
 										<input type="text" class="form__input js-form-input">
 									</div>
-								</div>
-								<div class="form__input-container js-form-input-container">
+								</label>
+								<label class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text js-input-text">Business ID</p>
 									</div>
 									<div class="form__input-holder">
 										<input type="text" class="form__input js-form-input">
 									</div>
-								</div>
-								<div class="form__input-container js-form-input-container">
+								</label>
+								<label class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text js-input-text">City</p>
 									</div>
 									<div class="form__input-holder">
 										<input type="text" class="form__input js-form-input">
 									</div>
-								</div>
-								<div class="form__input-container js-form-input-container">
+								</label>
+								<label class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text js-input-text">Country</p>
 									</div>
 									<div class="form__input-holder">
 										<input type="text" class="form__input js-form-input">
 									</div>
-								</div>
-								<div class="form__input-container js-form-input-container">
+								</label>
+								<label class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text js-input-text">Phone number</p>
 									</div>
 									<div class="form__input-holder">
 										<input type="text" class="form__input js-form-input">
 									</div>
-								</div>
-								<div class="form__input-container js-form-input-container">
+								</label>
+								<label class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text js-input-text">Payment method</p>
 									</div>
 									<div class="form__input-holder">
 										<input type="text" class="form__input js-form-input">
 									</div>
-								</div>
-								<div class="form__input-container js-form-input-container">
+								</label>
+								<label class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text js-input-text">Payment details</p>
 										<p class="form__input-under-text">
@@ -102,7 +102,7 @@
 									<div class="form__input-holder">
 										<textarea class="form__textarea form__textarea_publishers js-form-input"></textarea>
 									</div>
-								</div>
+								</label>
 								<div class="form__input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<span class="form__input-text">Payment method</span>
@@ -117,14 +117,14 @@
 									</div>
 								</div>
 								<div class="form__input-container js-form-input-container">
-									<div class="form__input-text-wrap form__input-text-wrap_account">
+									<label for="acc-minimum" class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text js-input-text">Minimum payment</p>
 										<p class="form__input-under-text">Minimum is $50</p>
-									</div>
+									</label>
 
 									<div class="form__input-wrap">
 										<div class="form__input-holder form__input-holder_mini">
-											<input type="text" class="form__input" placeholder="0">
+											<input id="acc-minimum" type="text" class="form__input" placeholder="0">
 										</div>
 										<label class="form__block">
 											<input type="checkbox" class="js-checkbox checkbox-styled">
@@ -133,7 +133,7 @@
 									</div>
 
 								</div>
-								<div class="form__input-container js-form-input-container">
+								<label class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text js-input-text">Never show ads of advertisers</p>
 										<p class="form__input-under-text">
@@ -143,7 +143,7 @@
 									<div class="form__input-holder">
 										<textarea class="form__textarea form__textarea_publishers js-form-input"></textarea>
 									</div>
-								</div>
+								</label>
 
 								<div class="form__input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
