--- a/src/templates/15_new-add-advertisers.twig
+++ b/src/templates/15_new-add-advertisers.twig
@@ -13,7 +13,7 @@
 			<div class="std-adv__content std-adv__content_center">
 				<div class="form">
 					<form>
-						<div class="form__input-container js-form-input-container">
+						<label class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
 								<p class="form__input-text js-input-text">Title</p>
 								<p class="form__input-under-text">For your reference</p>
@@ -21,8 +21,8 @@
 							<div class="form__input-holder">
 								<input type="text" class="form__input js-form-input">
 							</div>
-						</div>
-						<div class="form__input-container">
+						</label>
+						<label class="form__input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
 								<p class="form__input-text js-input-text">Show another zone:</p>
 							</div>
@@ -34,7 +34,7 @@
 									<option value="4">Banners Full Size 468x60 - Keywords</option>
 								</select>
 							</div>
-						</div>
+						</label>
 						<div class="form__submit-container">
 							<div class="form__submit-holder form__submit-holder_account">
 								<button class="form__submit btn">continue</button>
