--- a/src/templates/19_edit-account-advertisers.twig
+++ b/src/templates/19_edit-account-advertisers.twig
@@ -13,23 +13,23 @@
 			<div class="std-adv__content">
 				<div class="form">
 					<form>
-						<div class="form__input-container js-form-input-container">
+						<label class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
 								<p class="form__input-text js-input-text form__input-text_required">Name</p>
 							</div>
 							<div class="form__input-holder">
 								<input type="text" class="form__input js-form-input">
 							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
+						</label>
+						<label class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
 								<p class="form__input-text js-input-text form__input-text_required">E-mail</p>
 							</div>
 							<div class="form__input-holder">
 								<input type="text" class="form__input js-form-input">
 							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
+						</label>
+						<label class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
 								<p class="form__input-text js-input-text">Password</p>
 								<p class="form__input-under-text">Keep it blank to use the current password</p>
@@ -37,48 +37,48 @@
 							<div class="form__input-holder">
 								<input type="password" class="form__input js-form-input">
 							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
+						</label>
+						<label class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
 								<p class="form__input-text js-input-text">Company name</p>
 							</div>
 							<div class="form__input-holder">
 								<input type="text" class="form__input js-form-input">
 							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
+						</label>
+						<label class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
 								<p class="form__input-text js-input-text">Business ID</p>
 							</div>
 							<div class="form__input-holder">
 								<input type="text" class="form__input js-form-input">
 							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
+						</label>
+						<label class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
 								<p class="form__input-text js-input-text">City</p>
 							</div>
 							<div class="form__input-holder">
 								<input type="text" class="form__input js-form-input">
 							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
+						</label>
+						<label class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
 								<p class="form__input-text js-input-text">Country</p>
 							</div>
 							<div class="form__input-holder">
 								<input type="text" class="form__input js-form-input">
 							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
+						</label>
+						<label class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
 								<p class="form__input-text js-input-text">Phone number</p>
 							</div>
 							<div class="form__input-holder">
 								<input type="text" class="form__input js-form-input">
 							</div>
-						</div>
-						<div class="form__input-container js-form-input-container">
+						</label>
+						<label class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
 								<p class="form__input-text js-input-text">Style</p>
 							</div>
@@ -90,7 +90,7 @@
 									<option value="4">Silver</option>
 								</select>
 							</div>
-						</div>
+						</label>
 					</form>
 				</div>
 			</div>
