--- a/src/templates/21_export-advertisers.twig
+++ b/src/templates/21_export-advertisers.twig
@@ -113,7 +113,7 @@
 
 								<div class="form__down-wrap">
 									<div class="form__date-select-wrap">
-										<div class="form__date-select">
+										<label class="form__date-select">
 											<div class="form__date">Month:</div>
 											<div class="form__select-holder form__select-holder_small">
 												<select class="form__select form__select_small">
@@ -131,14 +131,14 @@
 													<option>December</option>
 												</select>
 											</div>
-										</div>
+										</label>
 
-										<div class="form__date-select">
+										<label class="form__date-select">
 											<div class="form__date">Year:</div>
 											<div class="form__input-holder">
 												<input type="text" class="form__input form__input_small">
 											</div>
-										</div>
+										</label>
 									</div>
 									<button class="btn btn_block">export</button>
 								</div>
@@ -183,12 +183,12 @@
 								<div class="form__down-wrap">
 									<div class="form__date-select-wrap">
 
-										<div class="form__date-select">
+										<label class="form__date-select">
 											<div class="form__date">Year:</div>
 											<div class="form__input-holder">
 												<input type="text" class="form__input form__input_small">
 											</div>
-										</div>
+										</label>
 									</div>
 									<button class="btn btn_block">export</button>
 								</div>
