--- a/src/templates/04_guest-contact-us.twig
+++ b/src/templates/04_guest-contact-us.twig
@@ -60,30 +60,30 @@
 			<div class="contact-us__content">
 				<div class="guest-form">
 					<form>
-						<div class="guest-form__line">
+						<label class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
 								<p class="guest-form__line-title guest-form__line-title_required">Name</p>
 							</div>
 							<div class="guest-form__input-holder">
 								<input type="text" class="guest-form__input" placeholder="Name">
 							</div>
-						</div>
-						<div class="guest-form__line">
+						</label>
+						<label class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
 								<p class="guest-form__line-title guest-form__line-title_required">E-mail</p>
 							</div>
 							<div class="guest-form__input-holder">
 								<input type="text" class="guest-form__input" placeholder="E-mail">
 							</div>
-						</div>
-						<div class="guest-form__line">
+						</label>
+						<label class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
 								<p class="guest-form__line-title guest-form__line-title_required">Message</p>
 							</div>
 							<div class="guest-form__textarea-holder">
 								<textarea cols="30" rows="10" class="guest-form__textarea" placeholder="Your message"></textarea>
 							</div>
-						</div>
+						</label>
 						<div class="guest-form__line guest-form__line_submit">
 							<div class="guest-form__submit-holder">
 								<button class="guest-form__submit" type="submit">submit</button>
