--- a/src/templates/07_publishers-new-place.twig
+++ b/src/templates/07_publishers-new-place.twig
@@ -22,16 +22,16 @@
 						<div class="publishers__form">
 							<div class="form">
 								<form>
-									<div class="form__input-container js-form-input-container">
-										<div class="form__input-text-wrap">
+									<label class="form__input-container js-form-input-container">
+										<div  class="form__input-text-wrap">
 											<p class="form__input-text js-input-text">Title</p>
 											<p class="form__input-under-text">for your reference</p>
 										</div>
 										<div class="form__input-holder">
-											<input type="text" class="form__input js-form-input">
+											<input type="text"  class="form__input js-form-input">
 										</div>
-									</div>
-									<div class="form__input-container">
+									</label>
+									<label class="form__input-container">
 										<div class="form__input-text-wrap">
 											<span class="form__input-text">Ad type</span>
 										</div>
@@ -43,7 +43,7 @@
 												<option value="4">Banners Full Size 468x60</option>
 											</select>
 										</div>
-									</div>
+									</label>
 									<div class="form__input-container">
 										<div class="form__input-text-wrap">
 											<span class="form__input-text"></span>
