--- a/src/templates/08_publishers-messages.twig
+++ b/src/templates/08_publishers-messages.twig
@@ -19,22 +19,22 @@
 						{#FORM#}
 						<div class="publishers__form">
 							<form>
-								<div class="form__input-container">
+								<label class="form__input-container">
 									<div class="form__input-text-wrap">
 										<span class="form__input-text">Title</span>
 									</div>
 									<div class="form__input-holder">
 										<input type="text" class="form__input" placeholder="Title">
 									</div>
-								</div>
-								<div class="form__input-container">
+								</label>
+								<label class="form__input-container">
 									<div class="form__input-text-wrap">
 										<span class="form__input-text">Text</span>
 									</div>
 									<div class="form__input-holder">
 										<textarea class="form__textarea" placeholder="Text"></textarea>
 									</div>
-								</div>
+								</label>
 								<div class="form__input-container">
 									<div class="form__input-text-wrap">
 										<span class="form__input-text"></span>
