Fixes for guest pages

--- a/src/css/blocks/guest/guest-form.less
+++ b/src/css/blocks/guest/guest-form.less
@@ -3,8 +3,8 @@
 	&__wrap {
 		display: flex;
 		flex-direction: column;
-		justify-content: space-between;
-		height: calc(~"100vh - 118px - 43px");
+		//justify-content: space-between;
+		//height: calc(~"100vh - 118px - 43px");
 	}
 	&__top-part {
 
