--- a/src/css/blocks/guest/guest-reg.less
+++ b/src/css/blocks/guest/guest-reg.less
@@ -2,6 +2,7 @@
 	padding-top: 39px + 99px;
 	padding-bottom: 39px;
 
+	flex-grow: 20;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
