--- a/src/css/blocks/guest/top-block.less
+++ b/src/css/blocks/guest/top-block.less
@@ -89,6 +89,7 @@
 @media screen and (max-width: 768px) {
 	.top-block {
 		margin-top: -60px;
+		min-height: auto;
 		&__container {
 			padding-top: 70px;
 			padding-bottom:  50px;
