--- a/src/templates/19_edit-account-advertisers.twig
+++ b/src/templates/19_edit-account-advertisers.twig
@@ -91,6 +91,11 @@
 								</select>
 							</div>
 						</div>
+						<div class="form__submit-container">
+							<div class="form__submit-holder form__submit-holder_account">
+								<button type="submit" class="form__submit btn">submit</button>
+							</div>
+						</div>
 					</form>
 				</div>
 			</div>
