Add label in guest

--- a/src/templates/04_guest-contact-us.twig
+++ b/src/templates/04_guest-contact-us.twig
@@ -60,30 +60,30 @@
 			<div class="contact-us__content">
 				<div class="guest-form">
 					<form>
-						<label class="guest-form__line">
+						<div class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title guest-form__line-title_required">Name</p>
+								<label for="g-con-name" class="guest-form__line-title guest-form__line-title_required">Name</label>
 							</div>
 							<div class="guest-form__input-holder">
-								<input type="text" class="guest-form__input" placeholder="Name">
+								<input id="g-con-name" type="text" class="guest-form__input" placeholder="Name">
 							</div>
-						</label>
-						<label class="guest-form__line">
+						</div>
+						<div class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title guest-form__line-title_required">E-mail</p>
+								<label for="g-con-email" class="guest-form__line-title guest-form__line-title_required">E-mail</label>
 							</div>
 							<div class="guest-form__input-holder">
-								<input type="text" class="guest-form__input" placeholder="E-mail">
+								<input id="g-con-email" type="text" class="guest-form__input" placeholder="E-mail">
 							</div>
-						</label>
-						<label class="guest-form__line">
+						</div>
+						<div class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title guest-form__line-title_required">Message</p>
+								<label for="g-con-message" class="guest-form__line-title guest-form__line-title_required">Message</label>
 							</div>
 							<div class="guest-form__textarea-holder">
-								<textarea cols="30" rows="10" class="guest-form__textarea" placeholder="Your message"></textarea>
+								<textarea id="g-con-message"" cols="30" rows="10" class="guest-form__textarea" placeholder="Your message"></textarea>
 							</div>
-						</label>
+						</div>
 						<div class="guest-form__line guest-form__line_submit">
 							<div class="guest-form__submit-holder">
 								<button class="guest-form__submit" type="submit">submit</button>
