--- a/src/templates/06_guest-registration.twig
+++ b/src/templates/06_guest-registration.twig
@@ -60,70 +60,70 @@
 			<div class="guest-reg__content">
 				<div class="guest-form">
 					<form>
-						<label class="guest-form__line">
+						<div class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title guest-form__line-title_required">Username</p>
+								<label for="g-reg-user" class="guest-form__line-title guest-form__line-title_required">Username</label>
 							</div>
 							<div class="guest-form__input-holder">
-								<input type="text" class="guest-form__input" placeholder="Username">
+								<input id="g-reg-user" type="text" class="guest-form__input" placeholder="Username">
 							</div>
-						</label>
-						<label class="guest-form__line">
+						</div>
+						<div class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title guest-form__line-title_required">Password</p>
+								<label for="g-reg-pass" class="guest-form__line-title guest-form__line-title_required">Password</label>
 							</div>
 							<div class="guest-form__input-holder">
-								<input type="text" class="guest-form__input" placeholder="Password">
+								<input id="g-reg-pass" type="text" class="guest-form__input" placeholder="Password">
 							</div>
-						</label>
-						<label class="guest-form__line">
+						</div>
+						<div class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title guest-form__line-title_required">E-mail</p>
+								<label for="g-reg-email" class="guest-form__line-title guest-form__line-title_required">E-mail</label>
 							</div>
 							<div class="guest-form__input-holder">
-								<input type="text" class="guest-form__input" placeholder="E-mail">
+								<input id="g-reg-email" type="text" class="guest-form__input" placeholder="E-mail">
 							</div>
-						</label>
-						<label class="guest-form__line">
+						</div>
+						<div class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title guest-form__line-title_required">Name</p>
+								<label for="g-reg-name" class="guest-form__line-title guest-form__line-title_required">Name</label>
 							</div>
 							<div class="guest-form__input-holder">
-								<input type="text" class="guest-form__input" placeholder="Name">
+								<input id="g-reg-name" type="text" class="guest-form__input" placeholder="Name">
 							</div>
-						</label>
-						<label class="guest-form__line">
+						</div>
+						<div class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title">Company Name</p>
+								<label for="g-reg-comp-name" class="guest-form__line-title">Company Name</label>
 							</div>
 							<div class="guest-form__input-holder">
-								<input type="text" class="guest-form__input" placeholder="Company Name">
+								<input id="g-reg-comp-name" type="text" class="guest-form__input" placeholder="Company Name">
 							</div>
-						</label>
-						<label class="guest-form__line">
+						</div>
+						<div class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title">City</p>
+								<label for="g-reg-city" class="guest-form__line-title">City</label>
 							</div>
 							<div class="guest-form__input-holder">
-								<input type="text" class="guest-form__input" placeholder="City">
+								<input id="g-reg-city" type="text" class="guest-form__input" placeholder="City">
 							</div>
-						</label>
-						<label class="guest-form__line">
+						</div>
+						<div class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title">Country</p>
+								<label for="g-reg-country" class="guest-form__line-title">Country</label>
 							</div>
 							<div class="guest-form__input-holder">
-								<input type="text" class="guest-form__input" placeholder="Country">
+								<input id="g-reg-country" type="text" class="guest-form__input" placeholder="Country">
 							</div>
-						</label>
-						<label class="guest-form__line">
+						</div>
+						<div class="guest-form__line">
 							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title">Phone</p>
+								<label for="g-reg-phone" class="guest-form__line-title">Phone</label>
 							</div>
 							<div class="guest-form__input-holder">
-								<input type="text" class="guest-form__input" placeholder="Phone">
+								<input id="g-reg-phone" type="text" class="guest-form__input" placeholder="Phone">
 							</div>
-						</label>
+						</div>
 						<div class="guest-form__line guest-form__line_checkbox">
 							<label class="guest-form__checkbox-holder">
 								<input type="checkbox" class="checkbox-styled js-checkbox">
