--- a/src/templates/11_publishers-edit-account.twig
+++ b/src/templates/11_publishers-edit-account.twig
@@ -19,96 +19,96 @@
 						{#FORM#}
 						<div class="publishers__form publishers__form_edit-account">
 							<form>
-								<label class="form__input-container js-form-input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text js-input-text form__input-text_required">Name</p>
+										<label for="p-ea-name" class="form__input-text js-input-text form__input-text_required">Name</label>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input js-form-input">
+										<input id="p-ea-name" type="text" class="form__input js-form-input">
 									</div>
-								</label>
-								<label class="form__input-container js-form-input-container">
+								</div>
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text js-input-text form__input-text_required">E-mail</p>
+										<label for="p-ea-email" class="form__input-text js-input-text form__input-text_required">E-mail</label>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input js-form-input">
+										<input id="p-ea-email" type="text" class="form__input js-form-input">
 									</div>
-								</label>
-								<label class="form__input-container js-form-input-container">
+								</div>
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text js-input-text">Password</p>
-										<p class="form__input-under-text">Keep it blank to use the current password</p>
+										<label for="p-ea-pass" class="form__input-text js-input-text">Password</label>
+										<label for="p-ea-pass" class="form__input-under-text">Keep it blank to use the current password</label>
 									</div>
 									<div class="form__input-holder">
-										<input type="password" class="form__input js-form-input">
+										<input id="p-ea-pass" type="password" class="form__input js-form-input">
 									</div>
-								</label>
-								<label class="form__input-container js-form-input-container">
+								</div>
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text js-input-text">Company name</p>
+										<label for="p-ea-com-name" class="form__input-text js-input-text">Company name</label>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input js-form-input">
+										<input id="p-ea-com-name" type="text" class="form__input js-form-input">
 									</div>
-								</label>
-								<label class="form__input-container js-form-input-container">
+								</div>
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text js-input-text">Business ID</p>
+										<label for="p-ea-id" class="form__input-text js-input-text">Business ID</label>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input js-form-input">
+										<input id="p-ea-id" type="text" class="form__input js-form-input">
 									</div>
-								</label>
-								<label class="form__input-container js-form-input-container">
+								</div>
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text js-input-text">City</p>
+										<label for="p-ea-city" class="form__input-text js-input-text">City</label>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input js-form-input">
+										<input id="p-ea-city" type="text" class="form__input js-form-input">
 									</div>
-								</label>
-								<label class="form__input-container js-form-input-container">
+								</div>
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text js-input-text">Country</p>
+										<label for="p-ea-country" class="form__input-text js-input-text">Country</label>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input js-form-input">
+										<input id="p-ea-country" type="text" class="form__input js-form-input">
 									</div>
-								</label>
-								<label class="form__input-container js-form-input-container">
+								</div>
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text js-input-text">Phone number</p>
+										<label for="p-ea-phone" class="form__input-text js-input-text">Phone number</label>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input js-form-input">
+										<input id="p-ea-phone" type="text" class="form__input js-form-input">
 									</div>
-								</label>
-								<label class="form__input-container js-form-input-container">
+								</div>
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text js-input-text">Payment method</p>
+										<label for="p-ea-pay" class="form__input-text js-input-text">Payment method</label>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input js-form-input">
+										<input id="p-ea-pay" type="text" class="form__input js-form-input">
 									</div>
-								</label>
-								<label class="form__input-container js-form-input-container">
+								</div>
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text js-input-text">Payment details</p>
-										<p class="form__input-under-text">
+										<label for="p-ea-pay-det" class="form__input-text js-input-text">Payment details</label>
+										<label for="p-ea-pay-det" class="form__input-under-text">
 											For example bank account info, Paypal email address, name on a check etc.
-										</p>
+										</label>
 									</div>
 									<div class="form__input-holder">
-										<textarea class="form__textarea form__textarea_publishers js-form-input"></textarea>
+										<textarea id="p-ea-pay-det" class="form__textarea form__textarea_publishers js-form-input"></textarea>
 									</div>
-								</label>
+								</div>
 								<div class="form__input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<span class="form__input-text">Payment method</span>
+										<label for="p-ea-pay-met" class="form__input-text">Payment method</label>
 									</div>
 									<div class="form__select-holder">
-										<select class="form__select">
+										<select id="p-ea-pay-met" class="form__select">
 											<option value="1">Check</option>
 											<option value="2">Check</option>
 											<option value="3">Check</option>
@@ -117,14 +117,14 @@
 									</div>
 								</div>
 								<div class="form__input-container js-form-input-container">
-									<label for="acc-minimum" class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text js-input-text">Minimum payment</p>
-										<p class="form__input-under-text">Minimum is $50</p>
-									</label>
+									<div for="acc-minimum" class="form__input-text-wrap form__input-text-wrap_account">
+										<label for="p-ea-minimum" class="form__input-text js-input-text">Minimum payment</label>
+										<label for="p-ea-minimum" class="form__input-under-text">Minimum is $50</label>
+									</div>
 
 									<div class="form__input-wrap">
 										<div class="form__input-holder form__input-holder_mini">
-											<input id="acc-minimum" type="text" class="form__input" placeholder="0">
+											<input id="p-ea-minimum" type="text" class="form__input" placeholder="0">
 										</div>
 										<label class="form__block">
 											<input type="checkbox" class="js-checkbox checkbox-styled">
@@ -133,24 +133,24 @@
 									</div>
 
 								</div>
-								<label class="form__input-container js-form-input-container">
+								<div class="form__input-container js-form-input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text js-input-text">Never show ads of advertisers</p>
-										<p class="form__input-under-text">
+										<label for="p-ea-never" class="form__input-text js-input-text">Never show ads of advertisers</label>
+										<label for="p-ea-never" class="form__input-under-text">
 											Enter usernames (separated by commas) of advertisers whose ads should never be displayed on your site.
-										</p>
+										</label>
 									</div>
 									<div class="form__input-holder">
-										<textarea class="form__textarea form__textarea_publishers js-form-input"></textarea>
+										<textarea id="p-ea-never" class="form__textarea form__textarea_publishers js-form-input"></textarea>
 									</div>
-								</label>
+								</div>
 
 								<div class="form__input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<p class="form__input-text js-input-text">Style</p>
+										<label for="p-ea-style" class="form__input-text js-input-text">Style</label>
 									</div>
 									<div class="form__select-holder">
-										<select class="form__select">
+										<select id="p-ea-style" class="form__select">
 											<option class="form__input-select-option">Silver</option>
 											<option class="form__input-select-option">Other Silver</option>
 											<option class="form__input-select-option">Not Silver</option>
