Add label in Publisher

--- a/src/templates/07_publishers-new-place.twig
+++ b/src/templates/07_publishers-new-place.twig
@@ -24,19 +24,19 @@
 								<form>
 									<label class="form__input-container js-form-input-container">
 										<div  class="form__input-text-wrap">
-											<p class="form__input-text js-input-text">Title</p>
+											<label for="p-np-title" class="form__input-text js-input-text">Title</label>
 											<p class="form__input-under-text">for your reference</p>
 										</div>
 										<div class="form__input-holder">
-											<input type="text"  class="form__input js-form-input">
+											<input id="p-np-title" type="text"  class="form__input js-form-input">
 										</div>
 									</label>
 									<label class="form__input-container">
 										<div class="form__input-text-wrap">
-											<span class="form__input-text">Ad type</span>
+											<label for="p-np-type" class="form__input-text">Ad type</label>
 										</div>
 										<div class="form__select-holder">
-											<select class="form__select">
+											<select id="p-np-type" class="form__select">
 												<option value="1">Banners Full Size 468x60</option>
 												<option value="2">Banners Full Size 468x60</option>
 												<option value="3">Banners Full Size 468x60</option>
