--- a/src/templates/08_publishers-messages.twig
+++ b/src/templates/08_publishers-messages.twig
@@ -21,18 +21,18 @@
 							<form>
 								<label class="form__input-container">
 									<div class="form__input-text-wrap">
-										<span class="form__input-text">Title</span>
+										<label for="p-mes-title" class="form__input-text">Title</label>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input" placeholder="Title">
+										<input id="p-mes-title" type="text" class="form__input" placeholder="Title">
 									</div>
 								</label>
 								<label class="form__input-container">
 									<div class="form__input-text-wrap">
-										<span class="form__input-text">Text</span>
+										<label for="p-mes-text" class="form__input-text">Text</label>
 									</div>
 									<div class="form__input-holder">
-										<textarea class="form__textarea" placeholder="Text"></textarea>
+										<textarea id="p-mes-text" class="form__textarea" placeholder="Text"></textarea>
 									</div>
 								</label>
 								<div class="form__input-container">
