--- a/src/templates/12_publishers-export.twig
+++ b/src/templates/12_publishers-export.twig
@@ -114,10 +114,10 @@
 
 									<div class="form__down-wrap">
 										<div class="form__date-select-wrap">
-											<label class="form__date-select">
-												<div class="form__date">Month</div>
+											<div class="form__date-select">
+												<label for="p-ex-month" class="form__date">Month</label>
 												<div class="form__select-holder form__select-holder_small">
-													<select class="form__select form__select_small">
+													<select id="p-ex-month" class="form__select form__select_small">
 														<option disabled selected>Month</option>
 														<option>January</option>
 														<option>February</option>
@@ -133,14 +133,14 @@
 														<option>December</option>
 													</select>
 												</div>
-											</label>
+											</div>
 
-											<label class="form__date-select">
-												<div class="form__date">Year:</div>
+											<div class="form__date-select">
+												<label for="p-ex-year2" class="form__date">Year:</label>
 												<div class="form__input-holder">
-													<input type="text" class="form__input form__input_small" placeholder="Year">
+													<input id="p-ex-year2" type="text" class="form__input form__input_small" placeholder="Year">
 												</div>
-											</label>
+											</div>
 										</div>
 										<button class="btn btn_block">export</button>
 									</div>
@@ -185,12 +185,12 @@
 									<div class="form__down-wrap">
 										<div class="form__date-select-wrap">
 
-											<label class="form__date-select">
-												<div class="form__date">Year:</div>
+											<div class="form__date-select">
+												<label for="p-ex-year1" class="form__date">Year:</label>
 												<div class="form__input-holder">
-													<input type="text" class="form__input form__input_small">
+													<input id="p-ex-year1" type="text" class="form__input form__input_small">
 												</div>
-											</label>
+											</div>
 										</div>
 										<button class="btn btn_block">export</button>
 									</div>
